fixed header and button spacing in admin view

--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -4,8 +4,3 @@
     justify-content: center;
     padding-top: 35px;
 }
-
-.ordersHeader {
-    margin-left: 700px;
-    margin-bottom: 20px;
-}
